<resources>
    <string name="app_name">Bangla News</string>
    <string name="todo">TODO</string>
    <string name="bengali_channel">Bengali News Channel</string>
    <string name="national_news_channel">National News channel</string>
    <string name="hindi_news_channel">Hindi News Channel</string>
    <string name="english_news_channel">English News Channel</string>
    <string name="e_paper">Bengali Newspaper</string>
    <string name="containing_information">Containing Information</string>


    <!--Admob Code    -->
    <string name="App_ID">ca-app-pub-3494707665933635~6137539764</string>
    <string name="InterstitialAd">ca-app-pub-3494707665933635/1946474311</string>
    <string name="open_ads">ca-app-pub-3494707665933635/9362879303</string>
    <string name="native_ads">ca-app-pub-3494707665933635/7758153593</string>


    <!--Example Code-->
<!--    <string name="App_ID">ca-app-pub-3940256099942544~3347511713</string>-->
<!--    <string name="InterstitialAd">ca-app-pub-3940256099942544/1033173712</string>-->
<!--    <string name="open_ads">ca-app-pub-3940256099942544/9257395921</string>-->
<!--    <string name="native_ads">ca-app-pub-3940256099942544/2247696110</string>-->

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="rate_update">RateUS/ Update</string>
    <string name="about_app">About App</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <string name="youtube">YouTube</string>
    <string name="channel_description">Channel Description</string>
    <string name="email">Email</string>
    <string name="live_now">Live Now</string>
    <string name="livetv_link">LiveTV Link</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="appDes">Live More with Bengal News Channel and E-Paper</string>
    <string name="channel_des">This app makes use of the YouTube Web view and Exoplayer to live stream the news channels inside the app. Neither we have control over the published content nor we are responsible for the content published on these channels. Below we have listed the official website of the news channels being streamed inside our app. Please get in touch with the original publisher in case of any clarification required on the contents of the channel.</string>
    <string name="news_paper_Des">We make it easy to read the most popular bengali daily newspapers inside our app. We load the daily newspapers from their official website inside our app browser to make it easy to read newspapers without leaving the app. We don\'t have any control over the contents being published on the listed newspapers. For any queries regarding the published content, please get in touch with the original publisher. We have listed the websites of ePaper publishers below</string>
    <string name="my_website">https://www.codehemu.com/</string>
    <string name="my_email">hemantagayen999@gmail.com</string>
    <string name="not_Open_ePaper">কিছু সমস্যার কারণে পেজটি খুলছে না. আপনি আপনার ব্রাউজারে খুলে দেখতে পারেন.</string>
    <string name="policy_url">https://sites.google.com/view/bangla-news-live-app/</string>
    <string name="google_top_news"><![CDATA[https://news.google.com/home?hl=bn&gl=BD]]></string>
    <string name="Bengali_news_json">https://script.google.com/macros/s/AKfycbxgucOavCOECvVB-zScc6Dd7yUzXewN4wPyBqzMogpM22iZXMpFAWOStUTlAG2X8ye6/exec</string>
    <string name="Hindi_news_json">https://script.google.com/macros/s/AKfycbyvHOPsrSOXu9IwnldNbC_AGf46Vi653R-zZtvb3-C-Ej57-k6sKcytEtw_l4Oe7p4/exec</string>
    <string name="English_news_json">https://script.google.com/macros/s/AKfycbwODevG8_PP9N7khIUJLNjMhzMU2QkrNQMLnQ89-zrCH-Anc5CZifrbRPJUSW4oMlk/exec</string>
    <string name="Bengali_paper_json">https://script.google.com/macros/s/AKfycbxuzVJ7LuwQQGrW_URUcXX9XmDGxeXaz_xTR1lQywnkIrVDJ5MmzVHRsHVl5w8g_v8/exec</string>

    <string name="sorry_desc">ক্ষমা করবেন আমরা কোন রকম তথ্য খুঁজে পাইনি</string>
    <string name="tab_here_read_more">Tab here read more</string>
    <string name="ap_bn">আরো পড়ুন..</string>
    <string name="rate_us">Rate US</string>
    <string name="shorts">Shorts</string>
    <string name="c_description">Channel Description</string>
    <string name="channel_info">Channel Info</string>
    <string name="website_link">Website Link</string>
    <string name="sa">Website Link</string>
    <string name="as">Channel Description</string>
    <string name="share_it">শেয়ার</string>
    <string name="more_app">More App</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="download_it">" - অ্যাপটি ডাউনলোড করতে নিচের লিঙ্কে যান\n\n"</string>
    <string name="dis_data">this News apps does not stream any of the channels included in its website/ app, All the streaming links are from third parties available free on the internet.If any one founds that we are violating by broadcasting any copyright protected channel email us the channel name,based on your email request.</string>
    <string name="dis_data2">AS of now This all News Channels are streamed by News. We are not responsible for its Contents.</string>
    <string name="live_not">এই চ্যানেলটি এখনও লাইভ হয়নি, আপনি চাইলে ইউটিউবে লাইভ দেখতে পারেন</string>
    <string name="head_line">Head Line</string>
    <string name="setting">Settings</string>
    <string name="short_categories">Short categories would you like to see?</string>
    <string name="reload">Reload</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="bengali_live_news_channels">Bengali Live News Channels</string>
    <string name="version">Version</string>
    <string name="free_bengali_news_paper">Free bengali News Paper</string>
    <string name="channel_name">CHANNEL NAME</string>
    <string name="loading">Loading…</string>
    <string name="news_channel_list">NEWS CHANNEL LIST</string>
    <string name="bengali_newspaper">BENGALI NEWSPAPER</string>
    <string name="menu">menu</string>


    <string name="general">General</string>
    <string name="themestat">Select a Theme Color</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="theme">Theme</string>
    <string name="themecolor">Theme Color</string>
    <string name="desktop_mode">Desktop mode</string>
    <string name="support">Support</string>
    <string name="can_report_about_copyright">Can report about copyright</string>
    <string name="rate">Rate Us</string>
    <string name="rateusstat">Enjoying this app? Would you mind giving a feedback on Google Play Store.</string>
    <string name="other">Other</string>
    <string name="feedback">Feedback</string>
    <string name="feedstat">If you have any suggestions, questions or problems, don\'t hesitate to contact me. </string>
    <string name="appversion">App Version</string>
    <string name="desktop_text">Will news papers open?</string>
    <string name="cancel">Cancel</string>
    <string name="appversionis">App Version is</string>

   
    <string-array name="rssList">
        <item>Choose a category…</item>
        <item>IPL</item>
        <item>কোচবিহার</item>
        <item>আলিপুরদুয়ার</item>
        <item>দেশ</item>
        <item>জলপাইগুড়ি</item>
        <item>দক্ষিণ দিনাজপুর</item>
        <item>রাজনীতি</item>
        <item>কলকাতা</item>
        <item>হাওড়া</item>
        <item>হুগলি</item>
        <item>চাকরি</item>
        <item>বাংলাদেশ</item>
        <item>বিদেশ</item>
        <item>কেরিয়ার</item>
        <item>খেলা</item>
        <item>দক্ষিণ ২৪ পরগনা</item>
    </string-array>

    <string-array name="rssURL">
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/national.xml</item>
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/ipl.xml</item>
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/cooch-behar.xml</item>
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/alipurduar.xml</item>
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/national.xml</item>
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/jalpaiguri.xml</item>
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/dakshin-dinajpur.xml</item>
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/politics.xml</item>
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/kolkata.xml</item>
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/howrah.xml</item>
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/hooghly.xml</item>
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/job.xml</item>
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/international/bangladesh.xml</item>
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/international.xml</item>
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/education-career/career.xml</item>
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/sports.xml</item>
        <item>https://bengali.news18.com/commonfeeds/v1/ben/rss/south-24-parganas.xml</item>
    </string-array>

</resources>