<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <Button
        android:id="@+id/bengali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bengali_channel"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:backgroundTint="?attr/colorAccent"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_category"
        android:drawableTint="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:icon="@drawable/ic_motion_video" />

    <Button
        android:id="@+id/hindi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hindi_news_channel"
        android:textSize="15sp"
        android:padding="10dp"
        android:backgroundTint="?attr/colorAccent"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_category"
        android:drawableTint="@color/white"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:icon="@drawable/ic_motion_video" />

    <Button
        android:id="@+id/english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/english_news_channel"
        android:textSize="15sp"
        android:padding="10dp"
        android:backgroundTint="?attr/colorAccent"
        android:textColor="@color/white"
        android:drawableStart="@drawable/ic_category"
        android:drawableTint="@color/white"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:icon="@drawable/ic_motion_video" />

</LinearLayout>

